vlib/v/checker/tests/or_block_assert_err.out
vlib/v/checker/tests/or_block_assert_err.vv:10:22: error: last statement in the `or {}` block should be an expression of type `int` or exit parent scope
    8 | 
    9 | f() or { assert true }
   10 | a := f() or { assert true }
      |                      ~~~~~~
   11 | dump(a)
   12 | g(f() or { assert true })
vlib/v/checker/tests/or_block_assert_err.vv:12:19: error: last statement in the `or {}` block should be an expression of type `int` or exit parent scope
   10 | a := f() or { assert true }
   11 | dump(a)
   12 | g(f() or { assert true })
      |                   ~~~~~~
