vlib/v/checker/tests/or_block_assert_err.vv
fn g(x int) {
	dump(x)
}

fn f() ?int {
	return none
}

f() or { assert true }
a := f() or { assert true }
dump(a)
g(f() or { assert true })
